--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
-    "react-typical": "^0.1.3",
+    "react-simple-typewriter": "^5.0.1",
     "swiper": "^11.2.1",
     "web-vitals": "^4.2.4"
   },
